fixed a bad color on chat and fixed emotes being squished

--- a/style.scss
+++ b/style.scss
@@ -77,7 +77,6 @@ body {
         img {
           image-rendering: pixelated;
           width: 28;
-          height: 28;
           display: inline-block;
         }
       }
@@ -114,7 +113,7 @@ body {
 }
 .HEX0000FF {
   // Blue
-  color: #0000ff !important;
+  color: #0077ff !important;
 }
 .HEX008000 {
   // Green
